# programming-in-os

./: .gitignore  README.md
lab1/: CMakeLists.txt
lab1/src/: CMakeLists.txt  lib.cpp  lib.hpp  main.cpp  old_lib.cpp  old_lib.hpp
lab1_rust/: Cargo.toml
lab1_rust/src/: main.rs
lab2/: .gitignore  pom.xml
lab2/src/main/java/org/dou/opencl/: ClRuntime.java  MultArrays.java
lab2/src/main/java/org/dou/opengl/: GLType.java  OpenGLCube.java  Program.java  Renderable.java  Shader.java  VideoBuffer.java  Window.java
lab2/src/main/resources/org/dou/opengl/: cube.frag.glsl  cube.vtx.glsl
lab3/src/: Main.java
lab4/src/: Main.java
lab5/: Output.txt
lab5/src/: Main.java
lab6/: Cargo.toml
lab6/src/: app.rs  main.rs  queue.rs  worker.rs
