[package]
name = "lab6"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amqprs = "1.2.1"
anyhow = "1.0.71"
async-trait = "0.1.68"
clap = { version = "4.2.7", features = ["derive"] }
crossbeam-channel = "0.5.8"
ctrlc = "3.2.5"
json = "0.12.4"
text_io = "0.1.12"
tokio = { version = "1", features = ["full"] }
